--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,11 @@
 .eslintignore
 .eslintrc.json
-.github
-.idea
+.github/
+.idea/
 .markdownlint.json
 .npmrc
 .prettierignore
-.vscode
+.vscode/
 npm-debug.log
 package-lock.json
-tests
-test.md
+/tests/
