--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on:  ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -18,3 +18,7 @@ jobs:
         run: npm install --no-package-lock
       - name: Run tests
         run: npm test
+      - name: Lint
+        run: npm run lint-check
+      - name: Pretty
+        run: npm run pretty-check
