--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdownlint-rule-search-replace",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A custom markdownlint rule for search and replaces",
   "main": "rule.js",
   "author": "Onkar Ruikar",
@@ -20,6 +20,7 @@
   "private": false,
   "scripts": {
     "test": "ava tests/*-tests.js",
+    "lint-check": "eslint --max-warnings 0 .",
     "lint": "eslint --max-warnings 0 --fix .",
     "pretty-check": "prettier --check .",
     "pretty": "prettier --write ."
