--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,7 +1,10 @@
 name: auto-merge
 
 on:
-  pull_request_target:
+  workflow_run:
+    workflows: ["Check PR contents"]
+    types:
+      - completed
 
 jobs:
   auto-merge:
@@ -12,5 +15,4 @@ jobs:
         with:
           github-token: ${{ secrets.AUTOMERGE_TOKEN }}
           command: "squash and merge"
-          approve: true
           target: minor
