--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdownlint-rule-search-replace",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A custom markdownlint rule for search and replaces",
   "main": "rule.js",
   "author": "Onkar Ruikar",
@@ -26,20 +26,20 @@
     "pretty": "prettier --write ."
   },
   "engines": {
-    "node": ">=14.18.0"
+    "node": ">=16"
   },
   "dependencies": {
-    "markdownlint-rule-helpers": "~0.19.0"
+    "markdownlint-rule-helpers": "0.21.0"
   },
   "devDependencies": {
-    "ava": "5.2.0",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-es": "^4.1.0",
-    "eslint-plugin-jsdoc": "^43.0.7",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-unicorn": "^46.0.0",
-    "markdownlint": "^0.28.1",
-    "prettier": "^2.8.7"
+    "ava": "5.3.1",
+    "eslint": "8.47.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-es": "4.1.0",
+    "eslint-plugin-jsdoc": "46.4.6",
+    "eslint-plugin-n": "16.0.2",
+    "eslint-plugin-unicorn": "48.0.1",
+    "markdownlint": "0.30.0",
+    "prettier": "3.0.2"
   }
 }
